syntax = "proto3";

package com.solanasuper.core;

option java_package = "com.solanasuper.core";
option java_outer_classname = "EnclaveProto";

message IdentityRequest {
  string attribute_id = 1;
  bytes encrypted_identity_seed = 2;
}

message GovernanceRequest {
  string proposal_id = 1;
  string vote_choice = 2; // "YES", "NO"
  bytes identity_signature = 3; // Signed by hardware key
}

message IncomeRequest {
  int64 amount = 1;
  string receiver_pubkey = 2;
}

message EnclaveRequest {
  string request_id = 1;
  string action_type = 2; // e.g., "GENERATE_PROOF", "VERIFY_PROOF"
  bytes payload = 3;      // The actual data to process (health record, transaction, etc.)
  IdentityRequest identity_req = 4;
  GovernanceRequest governance_req = 5;
  IncomeRequest income_req = 6;
}

message EnclaveResponse {
  string request_id = 1;
  bool success = 2;
  string error_message = 3;
  bytes proof_data = 4;   // The generated ZK proof
}
